# bumbershoot-trayapp

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_runner.rs  application.rs  bumbershoot_app.rs  event_handler.rs  factories.rs  lib.rs  main.rs  myguest.rs  php_dispatcher.rs  runners.rs  sending.rs  wispot_api.rs  wispot_integration.rs
